--- a/controllers/crds/terraformresource.yaml
+++ b/controllers/crds/terraformresource.yaml
@@ -1,18 +1,18 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: dnsrecords.easyaas.dev
+  name: terraformresources.core.easyaas.dev
 spec:
   scope: Namespaced
-  group: easyaas.dev
+  group: core.easyaas.dev
   names:
     categories:
       - easyaas
-    kind: DnsRecord
-    plural: dnsrecords
-    singular: dnsrecord
+    kind: TerraformResource
+    plural: terraformresources
+    singular: terraformresource
     shortNames:
-      - dns
+      - tfr
   versions:
     - name: v1
       served: true
@@ -24,14 +24,27 @@ spec:
             spec:
               type: object
               properties:
-                dnsName:
+                terraform:
+                  type: object
+                  properties:
+                    source:
+                      type: string
+                    version:
+                      type: string
+                crd:
                   type: string
-                recordType:
-                  type: string
-                targets:
+                extraEnvVariables:
                   type: array
                   items:
-                    type: string
+                    type: object
+                    properties:
+                      name:
+                        type: string
+                      value:
+                        type: string
+              required:
+                - crd
+                        
             status:
               type: object
               properties:
