--- a/resources/dns-record/terraformresource.yaml
+++ b/resources/dns-record/terraformresource.yaml
@@ -2,8 +2,11 @@ apiVersion: core.easyaas.dev/v1
 kind: TerraformResource
 metadata:
   name: dnsrecords
+  labels:
+    managed-by: dnsrecords.easyaas.dev
 spec:
-  terraform:
-    source: github.com/nilscan/easy-aas-dns//resources/dns-record/terraform?ref=main
   crd: dnsrecords.easyaas.dev
-  
+  terraform:
+    # source: github.com/nilscan/easy-aas-dns//resources/dns-record/terraform
+    source: tfr://host.k3d.internal:8080/dns-record?version=~>1
+    # source: http://host.k3d.internal:8080/resources/dns-record.zip
