--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,10 @@ insert_final_newline = true
 [*.py]
 indent_size = 4
 
+[*.rego]
+indent_style = tab
+indent_size = 4
+
 [Makefile]
 indent_style = tab
 indent_size = 4
