--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "easy-aas-dns"
+name = "easyaas"
 version = "0.1.0"
 description = ""
 authors = ["Nilscan"]
@@ -8,7 +8,6 @@ authors = ["Nilscan"]
 python = "^3.9"
 kopf = {extras = ["dev"], version = "^1.36.1"}
 kubernetes = "^26.1.0"
-Flask = "^2.3.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.0"
