--- a/easyaas/terraform_resource_controller/charts/terraform-job/values.yaml
+++ b/easyaas/terraform_resource_controller/charts/terraform-job/values.yaml
@@ -1,3 +1,9 @@
+easyaas:
+  docker:
+    registry: null
+    image: nilscan/terragrunt-runner
+    tag: 0.0.0
+
 managedBy: null
 easyaasResourceParams: {}
 resource: {}
