Fix terraform_resource_controller issues

--- a/easyaas/terraform_resource_controller/crds/terraformresource.yaml
+++ b/easyaas/terraform_resource_controller/crds/terraformresource.yaml
@@ -61,6 +61,19 @@ spec:
                         type: string
                       namespace:
                         type: string
+                extraClusterRoles:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      apiGroup:
+                        type: string
+                        default: rbac.authorization.k8s.io/v1
+                      kind:
+                        type: string
+                        default: ClusterRole
+                      name:
+                        type: string
                 extraEnvVariables:
                   type: array
                   items:
