--- a/easyaas/terraform_resource_controller/charts/terraform-job/templates/rbac.yaml
+++ b/easyaas/terraform_resource_controller/charts/terraform-job/templates/rbac.yaml
@@ -14,7 +14,6 @@ rules:
       - get
       - list
       - watch
-      - create
       - update
       - delete
     resourceNames:
@@ -28,6 +27,7 @@ rules:
       - secrets
     verbs:
       - list
+      - create # Create can't be scoped by resource name, see 'Referring to resources' on https://kubernetes.io/docs/reference/access-authn-authz/rbac/
 
   # Lease for terraform lock
   - apiGroups:
@@ -44,6 +44,7 @@ rules:
       - update
 
     resourceNames:
+        # Note: This must match the value defined for the backend in terragrunt.hcl
       - lock-tfstate-default-easyaas-{{ .Release.Name }}
 
 ---
@@ -51,12 +52,12 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ .Release.Name}}-jobs-terraform-backend
+  name: {{ .Release.Name }}-job-terraform-backend
   namespace: {{ .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: {{ .Release.Name}}-job-terraform-backend
+  name: {{ .Release.Name }}-job-terraform-backend
 subjects:
   - kind: ServiceAccount
     name: {{ template "serviceAccount.name" . }}
